--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -1,4 +1,4 @@
-name: ETL + DBT Pipeline
+name: ETL Pipeline
 
 on:
   push:
@@ -6,43 +6,31 @@ on:
       - main
 
 jobs:
-  run-pipeline:
+  run-etl:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
 
-      - name: Wait for Postgres
-        run: sleep 10
-
-      - name: Run ETL
-        run: python etl/etl_job.py
-
-      - name: Run dbt
+      - name: Run ETL job
         run: |
-          dbt run --profiles-dir .
+          python etl/etl_job.py
+
+      - name: Install dbt
+        run: pip install dbt-duckdb
+
+      - name: Run dbt models
+        run: dbt run
+
+      - name: Test dbt models
+        run: dbt test   
